@@ -2,6 +2,8 @@
 v4.2.0-git
 ----------
 
+[jan] Only use URL rewriting for saving/completing tasks if pretty URLs are
+      enabled in the configuration.
 [jan] Don't include smart lists in top menu.
 [jan] Fix top menu URLs to create new tasks in specific task lists.
 
